--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "google-client-api": "^1.0.4",
+    "plotly.js": "^1.35.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-plotly.js": "^1.7.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
